Fixed layout issue with firefox

--- a/wye/static/sass/_forms.scss
+++ b/wye/static/sass/_forms.scss
@@ -10,6 +10,7 @@ form {
         line-height: 1.7;
         padding: 0 0.5em;
         border-radius: 0.2em;
+        width: 9em;
         &:focus {
             outline: none;
         }
